# wxStudy

./: .gitignore  ReadMe.adoc
01.wxHelloWorld/: CMakeLists.txt  ReadMe.adoc  wxHelloWorld.cpp
02.wxConfig/: CMakeLists.txt  ReadMe.adoc  wxConfig.cpp
